--- a/README
+++ b/README
@@ -14,7 +14,7 @@ Genetics Institute](http://www.ufgi.ufl.edu/).
 This file is written using
 [Markdown](http://daringfireball.net/projects/markdown/). It should be
 fairly legible as plain text but there are tools that will produce a
-bit nicer output,
+nice HTML output,
 e.g. http://daringfireball.net/projects/markdown/dingus.
 
 
@@ -33,7 +33,7 @@ external changes.
 
 ### External requirements
 
-These you will need to setup on your system ahead of getting started.
+These will need to be setup on your system before getting started.
 
 * [Python](http://python.org/): The bulk of the glue code is written
   in Python. It is targeting python 2.6 though 2.7 should work just as
@@ -45,8 +45,8 @@ These you will need to setup on your system ahead of getting started.
 * A C compiler: the actual analysis code is written in C. Tested with
   gcc 4.6.1. Others should work, I don't think there is anything too
   crazy being used.
-* Make: A makefile is used to build all the
-  C. [make](http://www.gnu.org/s/make/).
+* [Make](http://www.gnu.org/s/make/): A makefile is used to build all
+  the C.
 * Some sort of PostScript viewer to view the output files.
 * An fcgi server to run the website. The included apache.conf works
   with Apache 2.2 running mod_fcgid but other fcgi servers should work
@@ -62,10 +62,12 @@ These you will need to setup on your system ahead of getting started.
 ### Packaged requirements
 
 The system uses several python packages for deployment:
-[virtualenv](http://pypi.python.org/pypi/virtualenv),
-[setuptools](http://pypi.python.org/pypi/setuptools), and
-[pip](http://www.pip-installer.org/en/latest/index.html). These are
-already included.
+
+* [virtualenv](http://pypi.python.org/pypi/virtualenv)
+* [distribute](http://pypi.python.org/pypi/distribute)
+* [pip](http://www.pip-installer.org/en/latest/index.html)
+
+These are already included.
 
 The `requirements.txt` contains the exact libraries beyond that. It is
 in a
@@ -74,9 +76,9 @@ that pip understands.
 
 Notes:
 
-* Biopython (1.58) Used to query entrez and read information out of
-  GenBank files. This could probably be upgraded without any hassle.
-* Django (1.3) Used to build the website interface. Upgrading this
+* Biopython (1.60): Used to query entrez and read information out of
+  GenBank files. This can probably be upgraded without any hassle.
+* Django (1.3): Used to build the website interface. Upgrading this
   will be much more involved.
 * flup is used by django to convert fcgi requests to wsgi.
 
@@ -114,14 +116,13 @@ directory that has been served under Apache.
 
 The project was developed with this in mind but has been extended
 beyond it so there is no good way to provide detailed configuration
-via the command line-- it's only available via the website.
+via the command line--it's only available via the website. This is
+still useful to run the analysis with all the default options.
 
 1. In a shell from the project root activate the virtualenv:
    `. ve/bin/activate`
 2. `python -mpynpact.main <gbkfile>`
-3. There should now be a ps file in the same directory as the gbk file
-   that is the results.
-
+3. It will print a message reporting the output.
 
 
 # Project Components
@@ -160,8 +161,8 @@ process.
 
 * `pynpact/pynpact/prepare.py` this is used to investigate a GBK file
   and come up with the default options that will be used on a run. To
-  change a default on the websites run page, go here. To change the
-  help text about one of the options, go here.
+  change the default analysis options.on the websites run page, go
+  here. To change the help text about one of the options, go here.
 * `pynpact/pynpact/entrez.py` is used for querying entrez to find gbk
   files.
 * `pynpact/pynpact/main.py` actually coordinates the running of the C
@@ -174,16 +175,18 @@ external to the web process. Clients can enqueue a task getting back
 an ID. This ID can then be used to check the status, obtain log
 output, or get the result of the original task when it is finished.
 
-The process will automatically create a daemon process (named
+The website will automatically create a daemon process (named
 `npact-taskqueue-daemon`) as neccessary. This can be managed manually
 with `manage.py tqdaemon {start,stop,status,restart}`. NB. if the
 daemon was started by the webserver it must be shutdown as the same
-user. e.g. `sudo -u www-data manage.py tqdaemon stop`.
+user. e.g. `sudo -u www-data ./manage.py tqdaemon stop`; this can also
+be done on the websites management panel.
 
 ## npactweb/
 
 This is the code for the website. It is built on top of
 [Django](http://djangoproject.com/).
+
 * `npactweb/settings.py` is the configuration for this django
   website. Tells what modules and applications to load; configures
   where paths for different content are.
@@ -226,8 +229,8 @@ Website content is mostly in the templates at
 alter the default values or help text given on the run page go look in
 `pynpact/pynpact/prepare.py`.
 
-This can be tested out by running the development server. See Using >
-Running > Development mode section above.
+This can be tested out by running the development server. See "Using >
+Running > Development mode" section above.
 
 ## Editing the C code
 
@@ -235,9 +238,9 @@ All of the C lives in `pynpact/src`.
 
 ### Building with make
 
-To build the C code associated with this project Make is required.
-There are two methods for building the code. This first is to use the
-makefile at `pynpact/makefile`. e.g.
+Make is required to build the C code associated with this
+project. Make will automatically detect which files have changed since
+it was last invoked and only build those pieces.
 
     cd pynpact
     make
