--- a/README
+++ b/README
@@ -114,7 +114,7 @@ directory that has been served under Apache.
 
 To log in to the npact management page use:
 username: npactmanager
-password: "pointy haired daemon"   -> no quotes, make sure to use the spaces
+password: "LBmgm2018"   -> no quotes
 
 ### command line interface
 
