--- a/README
+++ b/README
@@ -130,6 +130,24 @@ still useful to run the analysis with all the default options.
 3. It will print a message reporting the output.
 
 
+# Publishing
+
+Most of the publishing is accomplished by `publish.sh`. It wraps a
+`git pull` and does a few extra build steps.
+
+## First time
+The first time NPACT is published to a new server a few more steps are
+going to be needed.
+
+* git clone the repository to the desired publish destination
+    * `git config core.sharedRepository group`
+* Include the `apache.conf` under the desired domain config.
+* From development host check variables at the top of `publish.sh` and run `publish.sh`
+
+## Republish
+* From development host check variables at the top of `publish.sh` and run `publish.sh`
+* Go to http://$HOST/npact/management and make sure the tqdaemon gets restarted
+
 # Project Components
 
 In the root of the project are several configuration and build files.
