--- a/README
+++ b/README
@@ -1,14 +1,25 @@
 
 # About
 
-NPACT is the N-Profile Analysis and Computation Tool. It is a way to
-analyze the ratios of different base pairs across a genome sections.
-The primary output is a Postscript or PDF file that graphs the ratios
-across the genome.
+NPACT (N-Profile Analysis and Computation Tool) implements methods to
+identifies in nucleotide sequences regions of statistically-significant
+compositional three-base periodicity associated to ORF structures,
+to compare the newly-identified ORFs with pre-annotated collections
+of genes and to highlight potential new genes not included in the annotation.
+The primary output is a graphical representation of sequence features
+represented by frame-specific compositional profiles (by default, GC content)
+and sequence segments with significant periodicity (Hits) together with
+representation of the pre-annotated genes and, in a separate track, newly
+identified ORFs not included in the annotation.
 
-This project was developed in 2011-2012 by Acceleration.net under
+NPACT accepts input sequences of any length and its dynamical graphical
+representations allow easy browsing and analysis of an entire prokaryotic genome.
+
+This NPACT project was developed in 2011-2015 by Acceleration.net under
 contract from Luciano Brocchieri at the [University of Florida
-Genetics Institute](http://www.ufgi.ufl.edu/).
+Genetics Institute](http://www.ufgi.ufl.edu/) based on sequence-analysis
+methods and computational tools developed by Luciano Brocchieri at the
+[University of Florida Genetics Institute](http://www.ufgi.ufl.edu/).
 
 ## About this file
 
