--- a/README
+++ b/README
@@ -116,7 +116,7 @@ installations, to use it.
 
 1. edit `npactweb/settings.py` to change DEBUG from False to True at
    the top of the file.
-2. `source ve/bin/activate`
+2. `source ve/bin/activate[.csh]`
 3. `python manage.py runserver`
 4. open [http://127.0.0.1:8000/npact/]()
 
